[package]
name = "aoc2025"
version = "0.1.0"
authors = ["zsacul <zsacul@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
gif = "0.13.1"
#divoom = { path = "../divoom-main/divoom" }
tokio = { version = "1.37.0", features = ["full"] }
itertools = "0.13.0"
num = "0.4.3"
png_pong = "0.9.3"
image = "0.25.9"

